--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fluentui/example-data": "^8.2.3",
     "@fluentui/react": "^8.14.2",
     "@fluentui/react-icons-mdl2": "^1.1.0",
     "@fortawesome/fontawesome-free": "^5.15.3",
@@ -19,16 +20,19 @@
     "@uifabric/experiments": "^7.39.27",
     "axios": "^0.21.1",
     "bootstrap": "^5.0.0",
+    "classnames": "^2.3.1",
     "i18next": "^20.2.2",
     "i18next-browser-languagedetector": "^6.1.0",
     "i18next-http-backend": "^1.2.2",
     "moment": "^2.29.1",
     "node-sass": "^6.0.0",
     "office-ui-fabric-react": "^7.170.0",
+    "office-ui-fabric-react-pagination": "0.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
     "react-i18next": "^11.8.15",
+    "react-paginate": "^7.1.3",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -67,8 +71,13 @@
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.1",
+    "@types/react-paginate": "^7.1.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-ultimate-pagination": "^1.2.0",
     "@types/styled-components": "^5.1.9",
+    "@typescript-eslint/parser": "^4.26.0",
+    "eslint-import-resolver-typescript": "^2.4.0",
+    "eslint-plugin-import": "^2.23.4",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-terser": "^7.0.2"
